apps/base/navidrome/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: navidrome
  labels:
    app.kubernetes.io/name: navidrome
    app.kubernetes.io/instance: navidrome
spec:
  selector:
    app.kubernetes.io/name: navidrome
    app.kubernetes.io/instance: navidrome
  ports:
    - name: http
      port: 4533
      targetPort: 4533
      protocol: TCP
