apps/base/navidrome/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: navidrome-route
  namespace: navidrome
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - music.localho.st
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: navidrome
          port: 4533
